--- a/Level 3/Task2_Internship_site/style.css
+++ b/Level 3/Task2_Internship_site/style.css
@@ -1,40 +1,68 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-/* body{
-    background-color: aquamarine;
-} */
-hr{
+a {
+    font-family: sans-serif;
+}
+
+hr {
     border: 2px solid black;
 }
+
 header {
-    /* background-color: steelblue; */
     width: 100%;
+    display: flex;
+    padding: 10px;
+
 }
 
-h1 {
+header>#main-heading {
+    margin: auto;
+}
+main>h2{
     text-align: center;
-    font-size: 3rem;
-    margin: 10px 0px;
+}
+main>h2>a{
+    color:coral;
+    text-shadow: 0px 0px 2px aqua;
 }
 
-h2 {
-    font-size: 1.8rem;
+body {
+    background-color: #F8F9FF;
+    overflow-x: hidden;
 }
-p,li {
+
+#main-heading {
+    text-align: center;
+    font-size: 3vw;
+    margin: 10px 0px;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    color: olivedrab;
+}
+
+
+
+p,
+li {
     font-size: 1.2rem;
+    /* font-size: 19.2px; */
     text-align: justify;
     margin: 10px;
 }
-form,textarea,input{
+
+form,
+textarea,
+input {
     /* font-size: 1.2rem; */
     font-size: 1rem;
 }
 
-ul li::marker {
-    content: '👉🏻';
+#about-list li::marker {
+    content:icon;
 }
 
 .intro,
@@ -49,13 +77,163 @@ main {
     padding: 5px;
 }
 
-
-#apply{
-    font-size: 1.4rem ;
-    text-align: center;
+.intro>ul,
+.project-info>ul {
+    margin-left: 3%;
 }
 
-footer>*{
+.details p {
+    font-size: 2vw;
+    text-transform: uppercase;
+    text-align: center;
+    color: crimson;
+    font-weight: bold;
+}
+
+.details p b {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-size: 1.4rem; */
+    font-size: 2.3vw;
+    color: rebeccapurple;
+    text-decoration: underline;
+}
+
+.headings {
+    text-decoration: underline;
+    color: royalblue;
+}
+
+#apply {
+    font-size: 2.2rem;
+    text-align: center;
+    color: crimson;
+}
+
+#apply>a{
+    color: rgb(255, 85, 0);
+    animation: apply-anime 200Ms infinite;
+}
+
+@keyframes apply-anime {
+    100%{
+        text-shadow: 0px 0px 8px #c423ff;
+        color: royalblue;
+    }
+}
+
+.qualification {
+    font-size: 20px;
+}
+
+.qualification>h2 {
+    font-size: 1.3em;
+}
+
+.qualification>ol {
+    margin: 0px 0px 0px 3%;
+}
+
+.qualification>ol>li {
+    font-size: 0.8em;
+}
+
+footer {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    background-color: aquamarine;
+}
+
+footer h3 {
+    font-size: 1.4rem;
+    text-decoration: underline;
+    color: royalblue;
+
+}
+
+textarea {
+    max-width: 20vw;
+    min-width: 10vw;
+    max-height: 10vh;
+    min-height: 10vh;
+
+}
+
+
+footer>div {
+    padding: 5;
+    margin: 10px;
+}
+
+footer>* {
     font-size: 1.2rem;
     margin: 10px;
+}
+
+footer>.query input {
+    width: 10vw;
+    height: 2vh;
+    font-size: 0.8rem;
+}
+
+footer>.query button {
+    width: 8vw;
+    height: 5vh;
+    font-weight: 530;
+}
+
+@media (max-width:600px) {
+    header a img{
+        width: 20vw;
+    }
+    #main-heading {
+        font-size: 1.5rem;
+    }
+
+    footer {
+
+        flex-direction: column;
+    }
+
+    .query {
+        border-top: 1px solid black;
+    }
+
+    footer>.query input {
+        width: 20vw;
+        font-size: 0.8rem;
+    }
+
+    footer>.query button {
+        width: 20vw;
+        height: 5vh;
+        font-weight: 530;
+    }
+
+    footer h3 {
+        text-decoration: underline;
+        color: royalblue;
+    }
+
+    footer>div {
+        width: 100%;
+        padding: 20px;
+        margin: 0;
+    }
+
+    textarea {
+        max-width: 50vw;
+        min-width: 10vw;
+        height: 15vh;
+        min-height: 2vh;
+    }
+
+
+    .details p {
+        font-size: 1.6rem;
+    }
+
+    .details p b {
+        font-size: 1.7rem;
+    }
 }
